# zephyr-external-module-template

./: .gitignore  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json
foolib/: Bar.cpp  CMakeLists.txt
foolib/foolib/: Bar.cpp  CMakeLists.txt
foolib/tests/: tests.conf
foolib/tests/bar/: CMakeLists.txt  UnitTests.cpp
foolib/tests/zephyr/: module.yml
lib/src/: CMakeLists.txt  foolib.conf
lib/src/foolib/: Bar.hpp
lib/tests/: west.yml
lib/tests/bar/: CMakeLists.txt  prj.conf  testcase.yaml
lib/tests/zephyr/: module.yml
tests/bar/: CMakeLists.txt  UnitTests.cpp  testcase.yaml
zephyr/: module.yml
